# donnut

./: README.md  README:md
docs/: tech-stack.md
donnut-backend/src/: index.ts
donnut-frontend/: .env  .env.local  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
donnut-frontend/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
donnut-frontend/components/: CrossChainForm.tsx  TokenSelector.tsx  WalletButton.tsx  footer.tsx  header.tsx  network-selector.tsx
donnut-frontend/hooks/: useEthersPrivy.ts  useWalletChain.ts
donnut-frontend/lib/: BrowserBlockchainProvider.ts  chains.ts  db.ts  supabase.ts  utils.ts
escrow-base/: Detailed_Comparison_Analysis.md
escrow-base/Resolver_EVM->SUI/: .gitignore  README.md  happyPathDemo.ts  package.json  pnpm-lock.yaml
escrow-base/Resolver_SOL->EVM/: .env.example  .gitignore  happyPathDemoSolanaToEvm.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
escrow-base/Resolver_SUI->EVM/: .env.example  .gitignore  README.md  happyPathDemoSuiToEvm.ts  package.json  tsconfig.json
escrow-base/escrow-base-evm/: .gitignore  README.md  hardhat.config.js  (+2 more)
escrow-base/escrow-base-solana/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
escrow-base/escrow-base-solana/programs/fusion_escrow_solana/: Cargo.toml
escrow-base/escrow-base-solana/programs/fusion_escrow_solana/src/: lib.rs
escrow-base/escrow-base-solana/tests/: fusion_escrow_solana.ts
fusion-plus-sdk/: .gitignore  package.json  pnpm-lock.yaml
(+35 files in other folders)
