[workspace]
members = [
    "programs/fusion_escrow_solana"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# Optimize for size.
opt-level = "z"
strip = "symbols"
debug = false
panic = "abort"
# The following options are considered unstable and may be removed in the future
# build-override = { opt-level = "z", lto = "fat", codegen-units = 1, debug = false, strip = "symbols", panic = "abort" }
# [profile.release.build-override]
# opt-level = "z"
# lto = "fat"
# codegen-units = 1
# debug = false
# strip = "symbols"
# panic = "abort"
