[package]
name = "fusion_escrow_solana"
version = "0.1.0"
description = "Solana programs for Fusion-inspired cross-chain atomic swaps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fusion_escrow_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# solana-program = "1.18.18" # Removed as per warning, use anchor_lang::solana_program
# Add other dependencies as needed, e.g., spl-token
